--- a/calculator.html
+++ b/calculator.html
@@ -31,7 +31,7 @@
             border-radius: 5px;
             margin-bottom: 15px;
             height: 60px;
-            overflow-x: auto;
+            overflow: hidden;
         }
 
         .buttons {
@@ -73,7 +73,7 @@
             display: flex;
             gap: 40px;
             padding: 20px;
-            align-items: flex-start;
+            align-items: center;
             justify-content: center;
             flex-wrap: wrap;
         }
@@ -177,7 +177,8 @@
 
             <h3>1. Lexing (Tokenizing)</h3>
             <p>The input string is broken into <strong>tokens</strong> — numbers and operators like <code>+</code>,
-                <code>*</code>, etc.</p>
+                <code>*</code>, etc.
+            </p>
 
             <h3>2. Parsing (Building the AST)</h3>
             <p>Tokens are converted into an <strong>Abstract Syntax Tree (AST)</strong> based on operator precedence.
@@ -277,7 +278,7 @@
                 next(); // consume the operator
 
                 if (loc >= tokens.length) {
-                    throw new Error(`Expected expression after operator '${op}'`);
+                    throw new Error(`Expected number`);
                 }
 
                 const right = parseExpression(prec + 1);
@@ -291,13 +292,13 @@
 
         function parsePrimary() {
             if (loc >= tokens.length) {
-                throw new Error("Unexpected end of input; expected number.");
+                throw new Error("Expected number.");
             }
 
             const token = next();
             const num = parseFloat(token);
             if (isNaN(num)) {
-                throw new Error("Invalid number: " + token);
+                throw new Error("Invalid number");
             }
 
             return { type: 'Literal', value: num };
@@ -331,7 +332,7 @@
                 case "-": return left - right;
                 case "*": return left * right;
                 case "/": return left / right;
-                default: throw new Error("Unknown operator: " + ast.operator);
+                default: throw new Error("Unknown operator");
             }
         }
 
@@ -347,7 +348,7 @@
                 newNum = true;
                 display.innerText = result;
             } catch (e) {
-                display.innerText = "Error: " + e.message;
+                display.innerText = "E: " + e.message;
             }
         }
 
